@@ -254,6 +254,38 @@ if a restart was invoked."
       (is (equal (list (sym "BAZ" "SYM") :internal)
                  (multiple-value-list (sym "BAZ" "SYM")))))))
 
+(with-test (:name :export-conflict.1.only-one-exported)
+  (with-packages (("FOO" (:intern "SYM"))
+                  ("BAR" (:intern "SYM"))
+                  ("BAZ"))
+    (handler-bind ((package-error #'continue))
+      (with-name-conflict-resolution ((sym "BAR" "SYM") :restarted restartedp)
+          (export (list (sym "FOO" "SYM") (sym "BAR" "SYM")) "BAZ")
+        (is restartedp)
+        (is (equal (list (sym "BAR" "SYM") :external)
+                   (multiple-value-list (sym "BAZ" "SYM"))))
+        (let (result)
+          (do-external-symbols (s "BAZ")
+            (push s result))
+          (is (= 1 (length result)))
+          (is (eql (sym "BAR" "SYM") (car result))))))))
+
+(with-test (:name :export-conflict.2.only-one-exported)
+  (with-packages (("FOO" (:intern "SYM"))
+                  ("BAR" (:intern "SYM"))
+                  ("BAZ"))
+    (handler-bind ((package-error #'continue))
+      (with-name-conflict-resolution ((sym "FOO" "SYM") :restarted restartedp)
+          (export (list (sym "FOO" "SYM") (sym "BAR" "SYM")) "BAZ")
+        (is restartedp)
+        (is (equal (list (sym "FOO" "SYM") :external)
+                   (multiple-value-list (sym "BAZ" "SYM"))))
+        (let (result)
+          (do-external-symbols (s "BAZ")
+            (push s result))
+          (is (= 1 (length result)))
+          (is (eql (sym "FOO" "SYM") (car result))))))))
+
 ;;; IMPORT
 (with-test (:name :import-nil.1)
   (with-packages (("FOO" (:use) (:intern "NIL"))
